Add toggle button

--- a/sass/og-gdp-chart.scss
+++ b/sass/og-gdp-chart.scss
@@ -157,6 +157,10 @@ $axis-color: #95a5ae;
 .toggle-chart {
   padding-left: 30%;
 }
+
+#historicalToggle {
+  padding-left: 1rem;
+}
 // Meta
 
 // Objects
